[tool.poetry]
name = "koji-builder-kube"
version = "0.1.0"
description = ""
authors = ["lrossett <lrossett@redhat.com>"]
packages = [
  { include = "koji_builder_kube", from = "src" },
]

[tool.poetry.scripts]
kojid = 'koji_builder_kube.cli:main'

[tool.poetry.dependencies]
python = "^3.6"
mypy = "^0.790"
typing = "^3.7.4"
koji = "^1.23.1"
typing_extensions = "^3.7.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
pytest-mock = "^3.5.1"
requests_mock = "^1.8.0"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

